{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 184,
  "lineage": "9fb86e21-c6d6-e746-1736-0e472946a9d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ec10929233384c7f",
            "arn": "arn:aws:ec2:us-east-1:540646170730:instance/i-0802391e144f5f7c6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0802391e144f5f7c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d7f1b9e8dcdf1772"
              }
            ],
            "primary_network_interface_id": "eni-0d7f1b9e8dcdf1772",
            "private_dns": "ip-172-31-19-82.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.19.82",
            "public_dns": "ec2-100-26-139-219.compute-1.amazonaws.com",
            "public_ip": "100.26.139.219",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0333536ebb91c56ce",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terraform_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e8d523c1bfedae1c",
            "tags": {
              "Name": "terraform-ec2-instance"
            },
            "tags_all": {
              "Name": "terraform-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fce2d0dce7a3fa85"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "540646170730",
            "id": "i-0802391e144f5f7c6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.terraform_key_pair",
            "aws_security_group.terraform_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540646170730:security-group/sg-0fce2d0dce7a3fa85",
            "description": "Allow ssh login from anywhere",
            "egress": [],
            "id": "sg-0fce2d0dce7a3fa85",
            "ingress": [],
            "name": "terraform_sg",
            "name_prefix": "",
            "owner_id": "540646170730",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_sg"
            },
            "tags_all": {
              "Name": "terraform_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6cec91676a79886"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "540646170730",
            "id": "sg-0fce2d0dce7a3fa85",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540646170730:security-group-rule/sgr-069ed8a66676ebcd6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-069ed8a66676ebcd6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fce2d0dce7a3fa85",
            "security_group_rule_id": "sgr-069ed8a66676ebcd6",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "540646170730",
            "id": "sgr-069ed8a66676ebcd6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540646170730:security-group-rule/sgr-0fd5e08430e0fabe9",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0fd5e08430e0fabe9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fce2d0dce7a3fa85",
            "security_group_rule_id": "sgr-0fd5e08430e0fabe9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "540646170730",
            "id": "sgr-0fd5e08430e0fabe9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540646170730:security-group-rule/sgr-05209fe12262930b2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-05209fe12262930b2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fce2d0dce7a3fa85",
            "security_group_rule_id": "sgr-05209fe12262930b2",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "540646170730",
            "id": "sgr-05209fe12262930b2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform_sg"
          ]
        }
      ]
    }
  ]
}